--- a/_sass/minima/dark-mode.scss
+++ b/_sass/minima/dark-mode.scss
@@ -1,7 +1,7 @@
 $high-emph: rgba(white, 0.87);
 $med-emph: rgba(white, 0.69); //Noicee
 $low-emph: rgba(white, 0.38);
-$website-color: #0833f5; 
+$website-color: #000000; 
 // $website-color : #0833f5;
 $overlay: mix($website-color, white, 95%);
 $overlay-light: mix($website-color, white, 86%);
@@ -12,7 +12,7 @@ html, body, input, textarea, select, button {
 }
 
 a {
-    color: rgb(11, 234, 41) !important;
+    color: rgb(255, 255, 255) !important;
 }
 
 a:hover {
