--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,19 +427,19 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #0833f5 !important; }
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #000000 !important; }
 
-a { color: #0bea29 !important; }
+a { color: white !important; }
 
 a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-nav { background-color: #0833f5; border-color: #2b50f6; }
+.site-nav { background-color: #000000; border-color: #242424; }
 
-* { scrollbar-color: #0833f5 #2b50f6; }
+* { scrollbar-color: #000000 #242424; }
 
-pre, code { border-color: #2b50f6; background-color: #143df6; }
+pre, code { border-color: #242424; background-color: #0d0d0d; }
 
 .page-description { color: rgba(255, 255, 255, 0.69); }
 
@@ -447,19 +447,19 @@ pre, code { border-color: #2b50f6; background-color: #143df6; }
 
 .post-content p, .post-content li { color: rgba(255, 255, 255, 0.69); }
 
-.btn { background-color: #143df6 !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #2b50f6 !important; }
+.btn { background-color: #0d0d0d !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #242424 !important; }
 
-.btn:hover { background-color: #0833f5 !important; }
+.btn:hover { background-color: #000000 !important; }
 
-table th { background-color: #143df6; border-color: #2b50f6; color: rgba(255, 255, 255, 0.87); }
+table th { background-color: #0d0d0d; border-color: #242424; color: rgba(255, 255, 255, 0.87); }
 
-table td { background-color: #0833f5; border-color: #2b50f6; color: rgba(255, 255, 255, 0.69); }
+table td { background-color: #000000; border-color: #242424; color: rgba(255, 255, 255, 0.69); }
 
-.flash { color: #0833f5 !important; filter: brightness(80%); }
+.flash { color: #000000 !important; filter: brightness(80%); }
 
 canvas { filter: invert(100%); }
 
-.post-list > li > div { box-shadow: none !important; background-color: #143df6; border: none !important; }
+.post-list > li > div { box-shadow: none !important; background-color: #0d0d0d; border: none !important; }
 
 li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
