--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -427,7 +427,7 @@ pre code { font-size: 15px !important; }
 
 /*-----------------------------------*/
 /*----- ADD YOUR STYLES BELOW -------*/
-html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #000000 !important; }
+html, body, input, textarea, select, button { color: rgba(255, 255, 255, 0.87) !important; background-color: #414040 !important; }
 
 a { color: white !important; }
 
@@ -435,11 +435,11 @@ a:hover { color: rgba(255, 255, 255, 0.87) !important; }
 
 .site-title, .site-title:visited, .site-nav, .page-link { color: rgba(255, 255, 255, 0.87) !important; }
 
-.site-nav { background-color: #000000; border-color: #242424; }
+.site-nav { background-color: #414040; border-color: #5c5b5b; }
 
-* { scrollbar-color: #000000 #242424; }
+* { scrollbar-color: #414040 #5c5b5b; }
 
-pre, code { border-color: #242424; background-color: #0d0d0d; }
+pre, code { border-color: #5c5b5b; background-color: #4b4a4a; }
 
 .page-description { color: rgba(255, 255, 255, 0.69); }
 
@@ -447,19 +447,19 @@ pre, code { border-color: #242424; background-color: #0d0d0d; }
 
 .post-content p, .post-content li { color: rgba(255, 255, 255, 0.69); }
 
-.btn { background-color: #0d0d0d !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #242424 !important; }
+.btn { background-color: #4b4a4a !important; color: rgba(255, 255, 255, 0.87) !important; border-color: #5c5b5b !important; }
 
-.btn:hover { background-color: #000000 !important; }
+.btn:hover { background-color: #414040 !important; }
 
-table th { background-color: #0d0d0d; border-color: #242424; color: rgba(255, 255, 255, 0.87); }
+table th { background-color: #4b4a4a; border-color: #5c5b5b; color: rgba(255, 255, 255, 0.87); }
 
-table td { background-color: #000000; border-color: #242424; color: rgba(255, 255, 255, 0.69); }
+table td { background-color: #414040; border-color: #5c5b5b; color: rgba(255, 255, 255, 0.69); }
 
-.flash { color: #000000 !important; filter: brightness(80%); }
+.flash { color: #414040 !important; filter: brightness(80%); }
 
 canvas { filter: invert(100%); }
 
-.post-list > li > div { box-shadow: none !important; background-color: #0d0d0d; border: none !important; }
+.post-list > li > div { box-shadow: none !important; background-color: #4b4a4a; border: none !important; }
 
 li .post-meta-description { color: rgba(255, 255, 255, 0.69) !important; }
 
